# mursic

./: .gitignore  Cargo.toml  README.md
examples/: greensleeves.rs  simple.rs  waves.rs
src/: compass.rs  effects.rs  lib.rs  manner.rs  note.rs  num.rs  pitch.rs  player.rs  song.rs  source.rs  stream.rs  tempo.rs  tone.rs  wave.rs
src/player/: rodio.rs
