[package]
name = "mursic"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2.1"
hound = "3.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.62"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.11"
